[gd_scene load_steps=2 format=3 uid="uid://cvlhkginc0uwm"]

[ext_resource type="Script" uid="uid://o4pqudy24v4v" path="res://scenes/GUI/shared/descriptions/shared_description/gui_plant_ability_descripion.gd" id="1_4fwci"]

[node name="GUIPlantAbilityDescription" type="VBoxContainer"]
offset_right = 11.0
offset_bottom = 12.0
theme_override_constants/separation = 2
script = ExtResource("1_4fwci")

[node name="Title" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="Title"]
unique_name_in_owner = true
custom_minimum_size = Vector2(9, 9)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="Title"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD_small"
vertical_alignment = 1

[node name="ActiveLabel" type="Label" parent="Title"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"LabelTiny"
horizontal_alignment = 2
vertical_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(46, 0)
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"RichTextControlTip"
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="ActivateHintLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(46, 0)
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"RichTextControlTipSmall"
bbcode_enabled = true
fit_content = true
scroll_active = false
